[Dharmik] env var updated

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 FLASK_APP=
 FLASK_ENV=
+SECRET_KEY=
 FLASK_DEBUG=
 FLASK_RUN_PORT=
 FLASK_RUN_HOST=
@@ -8,4 +9,7 @@ SQLALCHEMY_DATABASE_URI=
 JWT_SECRET_KEY=
 JWT_IDENTITY_CLAIM=
 EMAIL_PASSWORD=
-OTP_EXPIRES_IN=
+OTP_EXPIRES_IN=1
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+CONF_URL=
